Fix layout on Firefox

--- a/sass/_images.scss
+++ b/sass/_images.scss
@@ -4,7 +4,7 @@
   overflow: hidden;
   padding-bottom: 56.25%; // 16:9 ratio
 
-  & img {
+  img {
     width: 100%;
   }
 }
