--- a/sass/_promo.scss
+++ b/sass/_promo.scss
@@ -17,17 +17,6 @@
   }
 }
 
-.c-promo,
-.c-promo__body {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-}
-
-.c-promo__body {
-  justify-content: space-between;
-}
-
 .c-promo__icon {
   padding-right: 0.25rem;
 }
